modified the products table and the related products